--- a/Northwind.Service/Northwind.Service.csproj
+++ b/Northwind.Service/Northwind.Service.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomerService.cs" />
+    <Compile Include="ExceptionLoggerService.cs" />
     <Compile Include="IStoredProcedureService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
