--- a/Northwind.Repository/Northwind.Repository.csproj
+++ b/Northwind.Repository/Northwind.Repository.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Repositories\CustomerRepository.cs" />
     <Compile Include="Queries\CustomerSalesQuery.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
